BuildHughes/translation-tool/inputs/source_meta/objects/Satellite__c.object
<CustomObject>
    <description>Mastered in Salesforce and stays in Salesforce.</description>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Satellite_ID__c</fullName>
        <formula>IF(CONTAINS(Name, &quot;Telesat19V&quot;), &quot;6&quot;, 
IF(CONTAINS(Name, &quot;AlYah-3&quot;), &quot;5&quot;, 
IF(CONTAINS(Name, &quot;Y1B&quot;), &quot;4&quot;, 
IF(CONTAINS(Name, &quot;Eutelsat-65W&quot;), &quot;3&quot;, 
IF(CONTAINS(Name, &quot;EchoStar 19&quot;),&quot;2&quot;, 
IF(CONTAINS(Name, &quot;Spaceway&quot;),&quot;1&quot;,null 
) 
) 
)
)
)
)</formula>
        <label>Satellite ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transport_Name__c</fullName>
        <label>Transport Name</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Transport_Names</valueSetName>
        </valueSet>
    </fields>
    <label>Satellite</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Satellite</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>